Fix footer on Safari
Ensure the footer is on top of the notes on note upload page.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,6 +22,7 @@ body {
   position: fixed;
   bottom: 0;
   width: 100%;
+  z-index: 1;
 }
 
 .swiper-container {
